@@ -1,4 +1,10 @@
 
+2007-11-07  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src/xtoffmpeg.c: fix ffmpeg multi-threading
+		for very small capture areas where
+		4 threads would exceed ffmpeg's 
+		internal maximum
+
 2007-11-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* po/en.po, po/de.po, src: gnome_ui.c, capture.c, 
 		job.c, job.h: Added error msg popup
